@@ -14,8 +14,13 @@
 
 ### File System
 
- * [Disable-NtfsCompression](http://get-carbon.org/help/Disable-NtfsCompression.html) now writes message with `Write-Verbose` instead of `Write-Host`. Improved error handling.
- * [Enable-NtfsCompression](http://get-carbon.org/help/Enable-NtfsCompression.html) now writes message with `Write-Verbose` instead of `Write-Host`. Improved error handling.
+ * [Disable-NtfsCompression](http://get-carbon.org/help/Disable-NtfsCompression.html) no longer writes messages with `Write-Host`. Improved error handling.
+ * [Enable-NtfsCompression](http://get-carbon.org/help/Enable-NtfsCompression.html) no longer writes messages with `Write-Host`. Improved error handling.
+
+### Firewall
+
+ * [Disable-FirewallStatefulFtp](http://get-carbon.org/help/Disable-FirewallStatefulFtp.html) no longer writes messages with `Write-Host`. Improved error handling.
+
  
 # 1.7.0 (30 April 2014)
 
